--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 73
-</p><p class="card-text">Number of spectra: 6570
-</p><p class="card-text">Last update: 2021-09-17, 16:45</p>
+<p class="card-text">Number of stars: 75
+</p><p class="card-text">Number of spectra: 6573
+</p><p class="card-text">Last update: 2021-09-17, 19:13</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -851,6 +851,18 @@
       <td>4.0</td>
     </tr>
     <tr>
+      <td><a href="v399pav.html">V399 Pav</a></td>
+      <td>19 42 25.38</td>
+      <td>-68 07 35.34</td>
+      <td>1</td>
+      <td>2021-09-08</td>
+      <td>2021-09-08</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
       <td><a href="v407cyg.html">V407 Cyg</a></td>
       <td>21 02 09.82</td>
       <td>+45 46 32.74</td>
@@ -860,6 +872,18 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-07 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="v417cma.html">V417 CMa</a></td>
+      <td>06 59 11.30</td>
+      <td>-29 02 05.15</td>
+      <td>2</td>
+      <td>2021-09-16</td>
+      <td>2021-09-16</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
       <td>2.0</td>
     </tr>
     <tr>
