--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 90
-</p><p class="card-text">Number of spectra: 6838
-</p><p class="card-text">Last update: 2021-10-02, 11:02</p>
+<p class="card-text">Number of stars: 91
+</p><p class="card-text">Number of spectra: 6841
+</p><p class="card-text">Last update: 2021-10-02, 11:16</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -89,7 +89,7 @@
         <h5 class="card-title">Stars of special interest</h5>
 <p class="card-text">Current campaigns: AG Dra, CH Cyg, SU Lyn, R Aqr, T CrB</p>
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
-<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: RS Oph, CN Cha (SyN), AR Pav</p>
+<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: RS Oph, CN Cha (SyN), AR Pav, SS73 141</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
@@ -1196,6 +1196,18 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-05-30 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="ss73141.html">SS73 141</a></td>
+      <td>18 12 11.34</td>
+      <td>-33 10 42.49</td>
+      <td>3</td>
+      <td>2021-08-25</td>
+      <td>2021-09-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
       <td>1</td>
     </tr>
     <tr>
