--- a/symbiotics.html
+++ b/symbiotics.html
@@ -74,7 +74,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 90
 </p><p class="card-text">Number of spectra: 6838
-</p><p class="card-text">Last update: 2021-10-02, 10:53</p>
+</p><p class="card-text">Last update: 2021-10-02, 13:55</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -87,9 +87,9 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text">Current campaigns: AG Dra, CH Cyg, SU Lyn, R Aqr, T CrB</p>
-<p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
-<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CN Cha</p>
+<p class="card-text">Current campaigns: </p>
+<p class="card-text">Current surveys: </p>
+<p class="card-text" style="margin-bottom:0.88cm;">Outbursts: </p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
